feat: Impelment business logic for Create, Read
Add error handling, business logic, and repo layer for service create and get
operations.
